Fix overflow bug

--- a/src/components/Home/Main/Contact/Contact.module.scss
+++ b/src/components/Home/Main/Contact/Contact.module.scss
@@ -2,7 +2,7 @@
 @import '@/app/styles/mixins.scss';
 .contact {
   padding-bottom: 15rem;
-
+  overflow: hidden;
   &-box {
     display: flex;
     flex-direction: row;
